[gd_scene load_steps=12 format=2]

[ext_resource path="res://scene/round/hammer_player.gd" type="Script" id=1]
[ext_resource path="res://resource/texture/charac/char_cir1.atlastex" type="Texture" id=2]
[ext_resource path="res://resource/texture/charac/char1.atlastex" type="Texture" id=3]
[ext_resource path="res://resource/texture/bat.atlastex" type="Texture" id=4]
[ext_resource path="res://resource/font/reg_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://resource/sound/bonk.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hammer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hammer_hit_left"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("hammer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, -100.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "commit_attack"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "hammer_hit_right"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("hammer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 100.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "commit_attack"
} ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15, 10 )

[node name="character" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 0
script = ExtResource( 1 )

[node name="hammer" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 4 )
offset = Vector2( 0, -32 )
flip_h = true

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="cam" type="Camera2D" parent="."]

[node name="face" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="name" type="Label" parent="."]
margin_left = -194.0
margin_top = -51.0
margin_right = 194.0
margin_bottom = -26.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 5 )
text = "@@@"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ani" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/hammer_hit_left = SubResource( 4 )
anims/hammer_hit_right = SubResource( 5 )

[node name="push" type="Area2D" parent="."]
collision_layer = 0

[node name="col" type="CollisionShape2D" parent="push"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="attack" type="Area2D" parent="."]
collision_layer = 0

[node name="col" type="CollisionShape2D" parent="attack"]
position = Vector2( 81, 0 )
shape = SubResource( 6 )

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
attenuation = 2.0

[node name="dmgface" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="ani" to="." method="_on_ani_animation_finished"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="timeout" from="dmgface" to="." method="_on_dmgface_timeout"]
